--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>base</title>
   </head>
   <body>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.3/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.3/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
   </body>
